--- a/Chat/WebContent/WEB-INF/web.xml
+++ b/Chat/WebContent/WEB-INF/web.xml
@@ -51,4 +51,28 @@
         <filter-name>CSRFPreventionFilter</filter-name>
         <url-pattern>/Chat/*</url-pattern>
     </filter-mapping>
+    
+    <!-- Require https for all configurations.  -->
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>HttpsOnly</web-resource-name>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <user-data-constraint>
+             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
+    
+    <security-constraint>
+        <web-resource-collection>
+        <web-resource-name>HttpsExceptions</web-resource-name>
+            <url-pattern>*.ico</url-pattern>
+            <url-pattern>/img</url-pattern>
+            <url-pattern>/res</url-pattern>
+        </web-resource-collection>
+        
+        <user-data-constraint>
+            <transport-guarantee>NONE</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
 </web-app>
